lib/stringify-extra/tests/ui/stringify_ty/unknown_type.stderr
error[E0412]: cannot find type `byte` in this scope
 --> tests/ui/stringify_ty/unknown_type.rs:4:19
  |
4 |     stringify_ty!(byte);
  |                   ^^^^
  |                   |
  |                   not found in this scope
  |                   help: perhaps you intended to use this type: `u8`
