lib/stringify-extra/tests/ui/stringify_ty/unknown_type.rs
use stringify_extra::stringify_ty;

fn main() {
    stringify_ty!(byte);
}
